# 2bpp

./: .gitignore  CMakeLists.txt
include/: main.hpp  shaders.hpp
shaders/: fragment.fs  vertex.vs
src/: main.cpp  shaders.cpp
